This ChangeLog describes the important changes of each svn commit.

r1442 (2010-09-22):

Updating the editor to take into account the new syntax of treasure-related
entities (chests, shop items, pickable items, destructible items and enemies).

r1441 (2010-09-21):

Improve the protection of the internal SDL objects encapsulated (access
methods to them are now private).

r1440 (2010-09-21):

Put the definition of inline member functions outside the class definition.

r1439 (2010-09-21):

Replace f(void) by f() in function declarations (f(void) has no meaning in
C++).

r1438 (2010-09-21):

Replace the DIE macro by better code.

r1435 (2010-09-18):

Fix shop items.

r1434 (2010-09-15):

Still fixing items.

r1433 (2010-09-14):

Fix item issues.

r1432 (2010-09-13):

- Still working on items.

r1431 (2010-09-13):

- Fix problems about items.

r1430 (2010-09-13):

- Finish implementing the class Treasure. The code now compiles but the game
cannot be played normally since some item features are still missing.
- Detect savegames created with the old format (before the changes about
items) and destroy them.

r1429 (2010-09-12):

- Implementing the class Treasure.

r1428 (2010-09-12):

- Implement the new version of the class PickableItem.

r1427 (2010-09-12):

- Implement the new version of the class Equipment.

r1426 (2010-09-12):

- Implement the class ItemProperties.

r1425 (2010-09-12):

- Move the item descriptions in a separate file items.dat.
- Add the interface of class ItemProperties.

r1424 (2010-09-10):

- Upgrade all existing maps of zsdx to respect the new syntax of chests, shop items,
pickable items, enemies and destructible items.

r1423 (2010-09-10):

- Change the syntax of pickable items and entities that depend on them
(enemies and destructible items). Now, all entities that can contain a
treasure (chests, shop items, pickable items, enemies and destructible