@@ -452,7 +452,7 @@
 15	0	192	496	16	16	1
 15	0	208	512	16	16	1
 15	0	224	496	16	16	1
-3	0	216	437	piece_of_heart	1	0
+3	0	216	437	piece_of_heart	1	71
 4	0	200	541	0	_random	0	-1
 15	0	128	400	32	32	0
 15	0	64	368	32	32	1
